@@ -2,6 +2,7 @@ Wed, 29 Mar 2006 13:29:51 +0200 <thp@perli.net>
 	* Only create one localDB object in the main gPodder window
 	* localDB is now caching data read from localDB XML files
 	* localDB cache is cleared when a download is completed
+	* Applied patch from Alain Tauch (bad URL "Add channel.." fix)
 
 Tue, 28 Mar 2006 20:30:00 +0200 <thp@perli.net>
 	* Disable some menu items when not on "available" tab
